--- a/meetup/app/globals.css
+++ b/meetup/app/globals.css
@@ -79,3 +79,16 @@ img {
 .button:hover {
   background-color: rgb(228, 49, 18);
 }
+
+.form_container {
+  width: 50%;
+  margin: auto;
+}
+.text_heading {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.border_form {
+  border: 1px solid rgb(218, 218, 218);
+}
