--- a/todo/app/globals.css
+++ b/todo/app/globals.css
@@ -2,32 +2,46 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.centre {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(51, 51, 51);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.margin-auto {
+  margin: auto;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.edit {
+  border-color: rgb(194, 116, 0);
+  color: rgb(194, 116, 0);
+}
+.edit:hover {
+  background-color: rgb(253, 195, 70);
+  color: rgb(51, 51, 51);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.delete {
+  border-color: tomato;
+  color: tomato;
+  margin-left: 15px;
+}
+
+.delete:hover {
+  background-color: rgb(255, 170, 155);
+  color: rgb(51, 51, 51);
+}
+
+.task_container {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin: auto;
+  margin-top: 15px;
+}
+.chk {
+  width: 17px;
+  height: 17px;
+  margin-right: 15px;
 }
