--- a/todo/app/globals.css
+++ b/todo/app/globals.css
@@ -33,6 +33,17 @@
   color: rgb(51, 51, 51);
 }
 
+.save {
+  border-color: green;
+  color: green;
+  margin-left: 15px;
+}
+
+.save:hover {
+  background-color: rgb(130, 236, 130);
+  color: rgb(51, 51, 51);
+}
+
 .task_container {
   display: flex;
   justify-content: space-between;
@@ -44,4 +55,13 @@
   width: 17px;
   height: 17px;
   margin-right: 15px;
+}
+
+#editMode {
+  border: 1px solid gray;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  padding: 5px;
+}
+.editInput {
+  width: 70%;
 }
